@@ -32,10 +32,12 @@ coverage_cutoff = 50
 #           3-Feb-2019 jdw disable py27
 #          21-Jul-2021 jdw update to py39
 #           9-Jan-2023 aae updates for tox 4
+#           9-Dec-2024 dwp update to py310
+#           9-Dec-2024 dwp py310 version
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
-envlist = format_pep8-{py39}, lint_pylint-{py39}, format_black-{py39}, py{39}, test_coverage-{py39}
+envlist = format_pep8-{py310}, lint_pylint-{py310}, format_black-{py310}, py{310}, test_coverage-{py310}
 #
 minversion = 3.4.0
 skip_missing_interpreters = true
@@ -46,30 +48,9 @@ passenv = CONFIG_SUPPORT_TOKEN_ENV
 allowlist_externals = echo
 commands =
     echo "Starting default tests in testenv"
-basepython = py39: python3.9
-#             py27: python2.7
+basepython = py310: python3.10
 
-#[testenv:py27]
-#description = 'Run unit tests (unittest runner) using {envpython}'
-#platform=
-#       macos: darwin
-#       linux: linux
-#skip_install = false
-#recreate = true
-#alwayscopy=true
-#package = editable-legacy
-#deps =
-#       -r requirements.txt
-#commands =
-#    echo "Starting {envname}"
-#    {envpython} -V
-#    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
-#    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
-#    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
-#    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_4} --pattern "{[local_settings]test_pattern}"
-#    echo "Completed {envname}"
-
-[testenv:py39]
+[testenv:py310]
 description = 'Run unit tests (unittest runner) using {envpython}'
 platform=
        macos: darwin
@@ -90,7 +71,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_pep8-py39]
+[testenv:format_pep8-py310]
 description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
@@ -106,7 +87,7 @@ commands =
     flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
 
 #
-[testenv:lint_pylint-py39]
+[testenv:lint_pylint-py310]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
@@ -120,7 +101,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_black-py39]
+[testenv:format_black-py310]
 description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
@@ -136,7 +117,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:test_coverage-py39]
+[testenv:test_coverage-py310]
 description = 'Run test coverage analysis'
 platform=
        macos: darwin
